# Yolo

./: .gitignore  download.py  readme.md
front/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
front/src/: App.tsx  main.tsx
front/src/components/: DetectionOverlay.tsx  ErrorBoundary.tsx  EventLog.tsx  MetricsBar.tsx  ResultPanel.tsx  TopBar.tsx  TrackingTimeline.tsx  UploadPanel.tsx  VisionCanvas.tsx
front/src/data/: mockDetections.ts
front/src/services/: mockVisionService.ts  visionApi.ts
front/src/styles/: index.css
front/src/types/: vision.ts
model/: onnx.py  train.py
model/data/: bdd100k_to_yolo.py
model/data/bdd100k_yolo_det/: convert_summary.yaml  data.yaml
model/data/severstal/: compare_yolo_weights.py  export_onnx.py  run_aug_experiments.py  slice_yolo_dataset.py  yolo_hard_aug_experiment.py
model/data/severstal/severstal_yolo_seg/: data.yaml
model/data/severstal/severstal_yolo_seg_hard_aug/: data.yaml
model/data/severstal/severstal_yolo_seg_sliced_640x256/: data.yaml  slice_config.yaml
yolo_onnx_cpp/: CMakeLists.txt  config.reference.yaml  config.yaml  main.cpp
yolo_onnx_cpp/config/: app_config.cpp  app_config.h
yolo_onnx_cpp/deploy/: classes.json
yolo_onnx_cpp/drogon/: api_server.cpp  api_server.h  response_json.cpp  response_json.h
yolo_onnx_cpp/image/: image_processing.cpp  image_processing.h
yolo_onnx_cpp/model/: inference_types.h  yolo_engine.cpp  yolo_engine.h
yolo_onnx_cpp/test_cpp/: image_processing_test.cpp  response_json_test.cpp
yolo_onnx_cpp/tracking/: byte_tracker.cpp  byte_tracker.h
yolo_onnx_cpp/video/: optical_flow_tracker.cpp  optical_flow_tracker.h  video_inference.cpp  video_inference.h  video_inference_detail.cpp  video_inference_detail.h
